# rudder

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: banking_flow.json
core/: context.py  duckling_enrichers.py  engine.py  gliner_client.py  llm_client.py  prompt_builder.py
data/: __init__.py  data_access.py  mock_data.py
demos/: README.md  __init__.py  demo_balance.py  demo_full_conversation.py  demo_interactive.py  demo_transactions.py  demo_transfer.py
examples/: README.md
examples/1_faq_simple/: flow.json  walkthrough.md
examples/2_faq_slots/: flow.json  walkthrough.md
examples/3_complex_slots/: flow.json  walkthrough.md
examples/4_error_handling/: flow.json  walkthrough.md
tests/: verify_llm.py  verify_llm_client.py
