[tool.poetry]
name = "rudder"
version = "0.1.0"
description = "A JSON-configurable dialog engine"
authors = ["Rajan Mehta <rajan.mehta911@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
transformers = "*"
torch = "^2.9.1"
accelerate = "^1.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
